# connect_four_console_edition

./: CMakeLists.txt  main.cpp
classes/ai/: ai.cpp  ai.h
classes/bitboard/: bitboard.cpp  bitboard.h
classes/board/: board.cpp  board.h
classes/player/: player.h
